feat(gestor): Refactorar formulario de configuración con UI avanzada

--- a/.env
+++ b/.env
@@ -10,3 +10,9 @@ DATABASE_URL="postgresql://postgres:12345@localhost:5432/mt_db?schema=public"
 NEXTAUTH_URL="http://localhost:3000"
 
 NEXTAUTH_SECRET="RatEvNR3+PwW+GCQTDX9VH59nuzQyOI1Y5sgiskzKOk="
+
+CLOUDINARY_URL="cloudinary://821995734849239:dKUA0L1tSr66SvBXFmQtA6EkP4U@dej4viqfd"
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dej4viqfd"
+
+NEXT_PUBLIC_CLOUDINARY_API_KEY="821995734849239"
