--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-toast": "^1.2.15",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.553.0",
     "next": "14.2.33",
     "next-auth": "^4.24.13",
+    "next-cloudinary": "^6.17.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^3.4.0",
