--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.553.0",
     "next": "14.2.33",
@@ -35,11 +36,13 @@
     "next-cloudinary": "^6.17.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
