feat: Implementar sistema de correos, refactorización modular y corrección de build

--- a/.env
+++ b/.env
@@ -16,3 +16,5 @@ CLOUDINARY_URL="cloudinary://821995734849239:dKUA0L1tSr66SvBXFmQtA6EkP4U@dej4viq
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dej4viqfd"
 
 NEXT_PUBLIC_CLOUDINARY_API_KEY="821995734849239"
+
+RESEND_API_KEY="re_8jNaoCGi_Ks5gwDzvSeGrLS4ZaAZfFRsY"
