--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
+    "@react-email/components": "^0.5.7",
+    "@react-email/render": "^1.4.0",
+    "@react-email/tailwind": "^1.2.2",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.8.0",
@@ -43,6 +46,7 @@
     "react-dom": "^18",
     "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
+    "resend": "^6.5.2",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
